[package]
name = "os"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "os"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.33"
volatile = "0.2.6"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = { version = "0.10.0" }
